# install-ifcopenshell-python

./: .flake8  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: publish-pypi.yml
install_ifcopenshell_python/: __init__.py  __main__.py  _version.py
