[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79
target_version = ['py37', 'py38', 'py39']

[tool.isort]
profile = "black"
line_length = 79
force_sort_within_sections = true
include_trailing_comma = true
use_parentheses = true
remove_redundant_aliases = true
ensure_newline_before_comments = true
atomic = true
