[metadata]
name = pyifc
version = attr: install_ifcopenshell_python.__version__
author = tbrus
author_email = tomek.brus1@gmail.com
description = Install ifcopenshell for python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tbrus/install-ifcopenshell-python
project_urls =
    Bug Tracker = https://github.com/tbrus/install-ifcopenshell-python/issues
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    # Add dependencies
python_requires = >=3.7

[options.extras_require]
test = 
    pytest>=6.0
    coverage>=6.0
